z-index bug

--- a/style.css
+++ b/style.css
@@ -107,11 +107,11 @@ i {
     position: absolute;
     content: '';
     left:-20%;
-    top: 10%;
-    width: 10em;
-    height: 15%;
+    top: -10%;
+    width: 30%;
+    height: 100%;
     background:radial-gradient(var(--repeat-gradient) 10%, transparent 11%) repeat;
-    z-index: 10;
+    /* z-index: 10; */
     background-size: 15px 15px;
 } 
 
